k8s/routing/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: liveklass-gateway
  namespace: default
  labels:
    app: liveklass-routing
spec:
  gatewayClassName: example-gateway-class
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: "liveklass.example.com"
      allowedRoutes:
        namespaces:
          from: All
